# HexLife

./: LICENSE.md  README.md  Readme.md
src/: CMakeLists.txt  bool.h  grid.c  grid.h  main.c  main.cpp
